welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if(nums(i+1)==nums(i)+5 && (nums(i+2)==nums(i)-1 || nums(i+1)==nums(i)+5 && nums(i+2)=nums(i) || nums(i+1)==nums(i)+5 && nums(i+2)==nums(i)+1)) {
                                                     ^has271:3: error: type mismatch;
 found   : Int
 required: Boolean
    if(nums(i+1)==nums(i)+5 && (nums(i+2)==nums(i)-1 || nums(i+1)==nums(i)+5 && nums(i+2)=nums(i) || nums(i+1)==nums(i)+5 && nums(i+2)==nums(i)+1)) {
                                                                                    ^has271:3: error: value || is not a member of Int
    if(nums(i+1)==nums(i)+5 && (nums(i+2)==nums(i)-1 || nums(i+1)==nums(i)+5 && nums(i+2)=nums(i) || nums(i+1)==nums(i)+5 && nums(i+2)==nums(i)+1)) {
                                                                                                  ^